fix logo padding on mobile

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -1513,6 +1513,7 @@ pre code {
     border-radius: 50%;
     height: 150px;
     width: 150px;
+    margin-left: 20px;
     margin-right: 20px;
 }
 
